[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Character.png" type="Texture" id=2]
[ext_resource path="res://Assets/Flash.png" type="Texture" id=3]
[ext_resource path="res://Assets/light.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
resource_name = "Muzzle_Flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1.5, 0.5 ) ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 12, 11 )
scale = Vector2( 3, 3 )
z_index = 1
script = ExtResource( 1 )

[node name="Player_Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 12, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 15, 0 )

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 15, 0 )
scale = Vector2( 1.5, 0.5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Muzzle_Flash = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 8, 4 )
texture = ExtResource( 4 )
texture_scale = 0.4
color = Color( 1, 0.956863, 0.290196, 1 )
energy = 0.8
shadow_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
